# devalot-hakyll

./: README.md  devalot-hakyll.cabal
src/Hakyll/Web/: Heist.hs  JavaScript.hs  Sass.hs
